pkg/lang/testdata/ub/inputs/valid/parsed-object-default.ub
inputs: {
  cfg: { type: object({ port: { type: integer, default: 8080 } }) }
}
