pkg/lang/testdata/ub/inputs/invalid/default-composite-element.ub
inputs: {
  names: { type: optional(list(string), [1]) }
}
